# jsindy

./: .gitignore  LICENSE  README.md  dev_test.ipynb  esindy_results.out  file_size.py  jsindy_benchmark.py  jsindy_exp.py  jsindy_linear_exp.py  jsindy_results.out  pyproject.toml  wsindy_results.out
data/: linear.py  lorenz.py  lotkavolterra.py  rossler.py
exp/: __init__.py  expdata.py  metrics.py
exp/evaluate/: esindy.py  jsindy.py  wsindy.py
exp/run_exp/: esindy.py  jsindy.py
jsindy/: __init__.py  dynamics_model.py  kerneltools.py  residual_functions.py  sindy_model.py  trajectory_model.py  util.py
jsindy/kernels/: __init__.py  base_kernels.py  fit_kernel.py  kernels.py  matern.py  tree_opt.py
jsindy/optim/: __init__.py  base.py  defaults.py  optimizers.py
jsindy_benchmark_results/: analysis.ipynb
jsindy_benchmark_results/Sep10Run/: analysis.ipynb  jsindy_benchmark.py
jsindy_benchmark_results/Sep14/: analysis.ipynb  jsindy_benchmark.py  tweak_optim.ipynb
jsindy_linear_results/june27/: analysis.ipynb
jsindy_results/: check_result.ipynb  noise_0.0_dt_0.04000000000000001.dill  noise_0.0_dt_0.14.dill  noise_10.0_dt_0.020000000000000004.dill  noise_10.0_dt_0.08000000000000002.dill  noise_10.0_dt_0.12000000000000002.dill  noise_12.0_dt_0.10000000000000002.dill  noise_12.0_dt_0.18000000000000005.dill  noise_14.0_dt_0.08000000000000002.dill  noise_14.0_dt_0.12000000000000002.dill  noise_14.0_dt_0.18000000000000005.dill  noise_16.0_dt_0.020000000000000004.dill  noise_16.0_dt_0.16000000000000003.dill  noise_18.0_dt_0.04000000000000001.dill  noise_18.0_dt_0.06000000000000001.dill  noise_18.0_dt_0.12000000000000002.dill  noise_18.0_dt_0.16000000000000003.dill  noise_2.0_dt_0.06000000000000001.dill  noise_2.0_dt_0.08000000000000002.dill  noise_20.0_dt_0.12000000000000002.dill  noise_20.0_dt_0.14.dill  noise_20.0_dt_0.18000000000000005.dill  noise_20.0_dt_0.2.dill  noise_4.0_dt_0.06000000000000001.dill  noise_6.0_dt_0.06000000000000001.dill  noise_6.0_dt_0.12000000000000002.dill  noise_8.0_dt_0.020000000000000004.dill  noise_8.0_dt_0.06000000000000001.dill
(+1961 files in other folders)
