[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jsindy"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "jax[cuda12]",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "ipykernel",
    "jaxopt",
    "cvxpy",
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "diffrax",
    "equinox",
    "sympy",
    "sympy2jax",
    "pandas",
    "jaxopt",
    "tqdm",
    "pysindy[miosr] >= 2.0.0-rc3",
    "pysindy-experiments @ git+https://github.com/Jacob-Stevens-Haas/gen-experiments@42f0081",
    "dill",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "coverage",
]

[tool.setuptools]
packages = ["jsindy", "data", "exp"]

[tool.setuptools_scm]


[tool.black]
line-length = 88
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | .vscode
  | version.py
  | build
  | dist
  | env
)/
'''
